# java-typst

./: README.md  pom.xml
.github/workflows/: test-ci.yaml
src/main/java/de/catalkaya/javatypst/: JavaTypst.java
src/main/java/io/github/fatihcatalkaya/javatypst/: JavaTypst.java
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs  typst_as_lib.rs
src/test/java/de/catalkaya/javatypst/: BasicTest.java
src/test/java/io/github/fatihcatalkaya/javatypst/: BasicTest.java
