[package]
name = "typst-string"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = "0.11.1"
typst-assets = {version = "0.11.1", features = ["fonts"]}
typst-pdf = "0.11.1"
#typst-as-library dependencies
comemo = "0.4"
# Fetching and unzipping packages
zune-inflate = { version = "0.2", default-features = false, features = [
    "gzip",
    "std",
] }
tar = "0.4"
ureq = "2.9"
# utils
time = "0.3"
ttf-parser = "0.24"

jni = "0.21.1"

[lib]
crate-type = ["cdylib"]